--- a/package.json
+++ b/package.json
@@ -25,5 +25,24 @@
         "watch": "nodemon -e html,scss -x \"npm run css\"",
         "start": "npm-run-all --parallel watch server",
         "test": "npm run lint & npm run css"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.5",
+        "bootstrap": "^5.1.3",
+        "bootstrap-icons": "^1.8.1",
+        "font-awesome": "^4.7.0",
+        "jquery": "^3.6.0",
+        "simple-icons": "^6.18.0"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.4",
+        "nodemon": "^2.0.15",
+        "npm-run-all": "^4.1.5",
+        "postcss": "^8.4.12",
+        "postcss-cli": "^9.1.0",
+        "purgecss": "^4.1.3",
+        "sass": "^1.50.0",
+        "serve": "^13.0.2",
+        "stylelint": "^14.6.1"
     }
 }
