--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "bootstrap-icons": "^1.8.1",
         "font-awesome": "^4.7.0",
         "jquery": "^3.6.0",
-        "simple-icons": "^6.18.0"
+        "simple-icons": "^6.18.0",
+        "stylelint-config-twbs-bootstrap": "^3.0.1"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.4",
