--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.4",
+        "gulp": "^4.0.2",
         "nodemon": "^2.0.15",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.12",
