--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "server": "serve --listen 8080",
         "watch": "nodemon -e html,scss -x \"npm run css\"",
         "start": "npm-run-all --parallel watch server",
+        "wtest": "webpack-dev-server --open",
         "test": "npm run lint & npm run css"
     },
     "dependencies": {
@@ -33,11 +34,13 @@
         "font-awesome": "^4.7.0",
         "jquery": "^3.6.0",
         "simple-icons": "^6.18.0",
-        "stylelint-config-twbs-bootstrap": "^3.0.1"
+        "stylelint-config-twbs-bootstrap": "^3.0.1",
+        "webpack": "^5.72.0"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.4",
         "gulp": "^4.0.2",
+        "html-webpack-plugin": "^5.5.0",
         "nodemon": "^2.0.15",
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.12",
@@ -45,6 +48,8 @@
         "purgecss": "^4.1.3",
         "sass": "^1.50.0",
         "serve": "^13.0.2",
-        "stylelint": "^14.6.1"
+        "stylelint": "^14.6.1",
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.8.1"
     }
 }
