--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
         "@popperjs/core": "^2.11.5",
         "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.8.1",
+        "css-loader": "^6.7.1",
         "font-awesome": "^4.7.0",
         "lit": "^2.2.2",
+        "postcss-loader": "^6.2.1",
+        "sass-loader": "^12.6.0",
         "simple-icons": "^6.18.0",
+        "style-loader": "^3.3.1",
         "stylelint-config-twbs-bootstrap": "^3.0.1",
         "webpack": "^5.72.0"
     },
