--- a/package.json
+++ b/package.json
@@ -25,16 +25,23 @@
         "watch": "nodemon -e html,scss -x \"npm run css\"",
         "start": "npm-run-all --parallel watch server",
         "wtest": "webpack-dev-server --open",
+        "wbuild": "webpack",
         "test": "npm run lint & npm run css"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
+        "babel-loader": "^8.2.5",
         "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.8.1",
         "css-loader": "^6.7.1",
         "font-awesome": "^4.7.0",
+        "html-loader": "^3.1.0",
+        "html-webpack-plugin": "^5.5.0",
+        "jquery": "^3.6.0",
         "lit": "^2.2.2",
+        "postcss": "^8.4.12",
         "postcss-loader": "^6.2.1",
+        "sass": "^1.50.1",
         "sass-loader": "^12.6.0",
         "simple-icons": "^6.18.0",
         "style-loader": "^3.3.1",
@@ -42,15 +49,10 @@
         "webpack": "^5.72.0"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.4",
         "gulp": "^4.0.2",
-        "html-webpack-plugin": "^5.5.0",
         "nodemon": "^2.0.15",
         "npm-run-all": "^4.1.5",
-        "postcss": "^8.4.12",
         "postcss-cli": "^9.1.0",
-        "purgecss": "^4.1.3",
-        "sass": "^1.50.0",
         "serve": "^13.0.2",
         "stylelint": "^14.6.1",
         "webpack-cli": "^4.9.2",
