--- a/package.json
+++ b/package.json
@@ -53,8 +53,12 @@
         "nodemon": "^2.0.15",
         "npm-run-all": "^4.1.5",
         "postcss-cli": "^9.1.0",
+        "postcss-scss": "^4.0.3",
         "serve": "^13.0.2",
-        "stylelint": "^14.6.1",
+        "stylelint": "^14.7.1",
+        "stylelint-config-prettier": "^9.0.3",
+        "stylelint-config-standard": "^25.0.0",
+        "stylelint-config-standard-scss": "^3.0.0",
         "webpack-cli": "^4.9.2",
         "webpack-dev-server": "^4.8.1"
     }
