--- a/package.json
+++ b/package.json
@@ -49,6 +49,14 @@
         "webpack": "^5.72.0"
     },
     "devDependencies": {
+        "@babel/eslint-parser": "^7.17.0",
+        "eslint": "^8.13.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-react": "^7.29.4",
+        "eslint-plugin-react-hooks": "^4.4.0",
+        "eslint-webpack-plugin": "^3.1.1",
         "gulp": "^4.0.2",
         "nodemon": "^2.0.15",
         "npm-run-all": "^4.1.5",
