--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "font-awesome": "^4.7.0",
         "html-loader": "^3.1.0",
         "html-webpack-plugin": "^5.5.0",
+        "inject-body-webpack-plugin": "^1.3.0",
         "jquery": "^3.6.0",
         "lit": "^2.2.2",
         "postcss": "^8.4.12",
