--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "bootstrap": "^5.1.3",
         "bootstrap-icons": "^1.8.1",
         "css-loader": "^6.7.1",
+        "css-minimizer-webpack-plugin": "^3.4.1",
         "font-awesome": "^4.7.0",
         "html-loader": "^3.1.0",
         "html-webpack-plugin": "^5.5.0",
@@ -47,7 +48,8 @@
         "simple-icons": "^6.18.0",
         "style-loader": "^3.3.1",
         "stylelint-config-twbs-bootstrap": "^3.0.1",
-        "webpack": "^5.72.0"
+        "webpack": "^5.72.0",
+        "webpack-merge": "^5.8.0"
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.17.0",
