Redesigned npm scripts and removed unneeded packages

--- a/package.json
+++ b/package.json
@@ -13,20 +13,15 @@
     },
     "homepage": "https://github.com/devilsec/website",
     "scripts": {
-        "css-compile": "sass --load-path=node_modules --style=compressed --source-map scss:assets/scss",
-        "css-lint": "stylelint scss/",
-        "css-prefix": "postcss --replace assets/css/starter.css --use autoprefixer --map",
-        "css-purge": "purgecss --keyframes --css assets/css/starter.css --content index.html \"node_modules/bootstrap/js/dist/{util,modal}.js\" --output assets/css/",
-        "css": "npm-run-all css-compile css-prefix",
-        "lint": "npm run css-list",
-        "build": "npm run css",
-        "clean-build": "npm run css-purge css",
-        "server": "serve --listen 8080",
-        "watch": "nodemon -e html,scss -x \"npm run css\"",
-        "start": "npm-run-all --parallel watch server",
-        "wtest": "webpack-dev-server --open",
-        "wbuild": "webpack",
-        "test": "npm run lint & npm run css"
+        "lint-js": "eslint \"**/*.{js,jsx}\"",
+        "lint-css": "stylelint \"**/*.{css,scss}\"",
+        "fix-js": "npm run lint-js -- --fix",
+        "fix-css": "npm run lint-css -- --fix",
+        "lint": "npm-run-all lint-js lint-css",
+        "lint-fix": "npm-run-all fix-js fix-css",
+        "build": "webpack --config webpack.prod.js",
+        "watch": "webpack serve --config webpack.dev.js",
+        "start": "npm run watch"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
@@ -61,11 +56,9 @@
         "eslint-plugin-react-hooks": "^4.4.0",
         "eslint-webpack-plugin": "^3.1.1",
         "gulp": "^4.0.2",
-        "nodemon": "^2.0.15",
         "npm-run-all": "^4.1.5",
         "postcss-cli": "^9.1.0",
         "postcss-scss": "^4.0.3",
-        "serve": "^13.0.2",
         "stylelint": "^14.7.1",
         "stylelint-config-prettier": "^9.0.3",
         "stylelint-config-standard": "^25.0.0",
