--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -35,11 +35,11 @@ jobs:
     needs: build
     steps:
       - name: Retrieve Build
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v3
         with:
           name: website-gh-actions-build
       - name: Deploy on GH Pages
-        uses: JamesIves/github-pages-deploy-action@v4.3.3
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          branch: gh-pages
-          folder: website-gh-actions-build
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: website-gh-actions-build
