--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -34,6 +34,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Checkout # Checkout simply to fix issues with GH deploy
+        uses: actions/checkout@v3
+        with:
+          ref: main
       - name: Retrieve Build
         uses: actions/download-artifact@v1
         with:
