--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,9 +19,7 @@ jobs:
         with:
           node-version: 16
       - name: Install Node packages
-        run: npm install
-      - name: Lint
-        run: npm run lint-fix
+        run: npm install --production
       - name: Build
         run: npm run build
       # This allows us to utilise the build in the deployment job.
