--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "fix-css": "npm run lint-css -- --fix",
         "lint": "npm-run-all lint-js lint-css",
         "lint-fix": "npm-run-all fix-js fix-css",
-        "build": "npm run lint-fix & webpack --config webpack.prod.js",
+        "build": "if-env NODE_ENV=production ?? npm run build:prod || npm run build:dev",
+        "build:dev": "npm run lint-fix & webpack --config webpack.prod.js",
+        "build:prod": "npm run lint-fix & webpack --config webpack.prod.js",
         "watch": "webpack serve --config webpack.dev.js",
         "start": "npm run watch"
     },
@@ -33,9 +35,11 @@
         "font-awesome": "^4.7.0",
         "html-loader": "^3.1.0",
         "html-webpack-plugin": "^5.5.0",
+        "if-env": "^1.0.4",
         "inject-body-webpack-plugin": "^1.3.0",
         "jquery": "^3.6.0",
         "lit": "^2.2.2",
+        "npm-run-all": "^4.1.5",
         "postcss": "^8.4.12",
         "postcss-loader": "^6.2.1",
         "sass": "^1.50.1",
@@ -44,6 +48,7 @@
         "style-loader": "^3.3.1",
         "stylelint-config-twbs-bootstrap": "^3.0.1",
         "webpack": "^5.72.0",
+        "webpack-cli": "^4.9.2",
         "webpack-merge": "^5.8.0"
     },
     "devDependencies": {
@@ -55,14 +60,12 @@
         "eslint-plugin-react": "^7.29.4",
         "eslint-plugin-react-hooks": "^4.4.0",
         "eslint-webpack-plugin": "^3.1.1",
-        "npm-run-all": "^4.1.5",
         "postcss-cli": "^9.1.0",
         "postcss-scss": "^4.0.3",
         "stylelint": "^14.7.1",
         "stylelint-config-prettier": "^9.0.3",
         "stylelint-config-standard": "^25.0.0",
         "stylelint-config-standard-scss": "^3.0.0",
-        "webpack-cli": "^4.9.2",
         "webpack-dev-server": "^4.8.1"
     }
 }
