--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -5,21 +5,23 @@ on:
     branches: [main]
 
 jobs:
+  project-setup:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: ./github/workflows/setup-project
+      with:
+        main-branch: true
+        production: true
   build:
     runs-on: ubuntu-latest
+    needs: project-setup
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Retrieve pre-setup project
+        uses: actions/download-artifact@v1
         with:
-          ref: main
-          persist-credentials: false
-          submodules: recursive
-      - name: Install Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: Install Node packages
-        run: npm install --production
+          name: ${{ needs.project-setup.outputs.BUILD_NAME }}
       - name: Build
         run: npm run build
       # This allows us to utilise the build in the deployment job.
