--- a/.github/workflows/lint-report.yml
+++ b/.github/workflows/lint-report.yml
@@ -5,20 +5,20 @@ on:
   - workflow_dispatch
 
 jobs:
+  project-setup:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ./github/workflows/setup-project
   js-lint:
     runs-on: ubuntu-latest
+    needs: project-setup
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Retrieve pre-setup project
+        uses: actions/download-artifact@v1
         with:
-          persist-credentials: false
-          submodules: recursive
-      - name: Install Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: Install Node packages
-        run: npm install
+          name: ${{ needs.project-setup.outputs.BUILD_NAME }}
       - name: Lint JS Files
         uses: Maggi64/eslint-plus-action@master
         with:
@@ -28,18 +28,14 @@ jobs:
           reportIgnoredFiles: true
   css-lint:
     runs-on: ubuntu-latest
+    needs: project-setup
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Retrieve pre-setup project
+        uses: actions/download-artifact@v1
         with:
-          persist-credentials: false
-          submodules: recursive
-      - name: Install Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: Install Node Packages
-        run: npm install
+          name: ${{ needs.project-setup.outputs.BUILD_NAME }}
       - name: Lint CSS Files
         uses: actions-hub/stylelint@master
         env:
