--- a/.github/workflows/lint-report.yml
+++ b/.github/workflows/lint-report.yml
@@ -14,6 +14,8 @@ on:
         default: true
         required: false
         type: boolean
+  pull_request:
+    branches: [main]
 
 jobs:
   project-setup:
