--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -31,10 +31,6 @@ on:
         type: boolean
 
 jobs:
-  project-setup:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: ./github/workflows/setup-project
   pre-lint-report:
     if: ${{inputs.pre-report == 'true'}}
     runs-on: ubuntu-latest
@@ -52,8 +48,9 @@ jobs:
           js: ${{inputs.js}}
           css: ${{inputs.css}}
   post-lint-report:
-    if: ${{inputs.post-report == 'true'}}
+    if: ${{inputs.post-report == 'true'}} && ${{inputs.fix == 'true'}}
     runs-on: ubuntu-latest
+    needs: lint-fix
     steps:
       - uses: ./github/workflows/lint-report
         with:
