--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -30,6 +30,7 @@ jobs:
         with:
           name: website-gh-actions-build
           path: dist
+          retention-days: 1
   deploy:
     runs-on: ubuntu-latest
     needs: build
