--- a/.github/workflows/lint-fix.yml
+++ b/.github/workflows/lint-fix.yml
@@ -2,6 +2,17 @@ name: Linting Fixing
 
 on:
   workflow_dispatch:
+    inputs:
+      js:
+        description: 'Whether JS code should be linted'
+        default: true
+        required: false
+        type: boolean
+      css:
+        description: 'Whether CSS and SCSS code should be linted'
+        default: true
+        required: false
+        type: boolean
   workflow_call:
     inputs:
       js:
