--- a/.github/workflows/lint-report.yml
+++ b/.github/workflows/lint-report.yml
@@ -52,7 +52,7 @@ jobs:
           issueSummaryMethod: refresh
           reportIgnoredFiles: true
   css-lint:
-    if: ${{ css == 'true' }} || ${{ github.event_name == 'pull_request' }}
+    if: ${{ inputs.css == 'true' }} || ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
     needs: project-setup
     steps:
