Properly implemented setup project workflow
Fixed implementation of the setup project reusable workflow in all workflows which referenced it

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,10 +6,8 @@ on:
 
 jobs:
   project-setup:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: ./github/workflows/setup-project
-      with:
+    uses: devilsec/website/.github/workflows/setup-project.yml@main
+    with:
         main-branch: true
         production: true
   build:
