--- a/.github/workflows/lint-report.yml
+++ b/.github/workflows/lint-report.yml
@@ -30,9 +30,7 @@ on:
 
 jobs:
   project-setup:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: ./github/workflows/setup-project
+    uses: devilsec/website/.github/workflows/setup-project.yml@main
   js-lint:
     if: ${{ inputs.js == 'true' }} || ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
