--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,30 +10,10 @@ jobs:
     with:
         main-branch: true
         production: true
-  build:
-    runs-on: ubuntu-latest
-    needs: project-setup
-    env:
-      NODE_ENV: production
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Retrieve pre-setup project
-        uses: actions/download-artifact@v1
-        with:
-          name: ${{ needs.project-setup.outputs.BUILD_NAME }}
-      - name: Build
-        run: npm run build
-      # This allows us to utilise the build in the deployment job.
-      - name: Upload Build
-        uses: actions/upload-artifact@v3
-        with:
-          name: website-gh-actions-build
-          path: dist
-          retention-days: 1
+        build: true
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: setup-project
     steps:
       - name: Checkout # Checkout simply to fix issues with GH deploy
         uses: actions/checkout@v3
