--- a/.github/workflows/setup-project.yml
+++ b/.github/workflows/setup-project.yml
@@ -45,13 +45,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: Install Production Packages
+      - name: Set Production Environment Variable
         if: ${{ inputs.production == true }}
-        env:
-          NODE_ENV: production
-        run: npm install
-      - name: Install Non-Production Packages
-        if: ${{ inputs.production != true }}
+        run: echo "NODE_ENV=production" >> $GITHUB_ENV
+      - name: Install Node Packages
         run: npm install
       - name: Build Project
         if: ${{ inputs.build == true }}
