Fixed artifact retrieval name
Fixed the name used for artifact retrieval in the workflows to be the one exported by the setup-project workflow. Correspondingly updated the built directory for github pages deployment in the deployment workflow.

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Retrieve Build
         uses: actions/download-artifact@v1
         with:
-          name: website-gh-actions-build
+          name: ${{ needs.project-setup.outputs.export-dir }}
       - name: Deploy on GH Pages
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
           branch: gh-pages
-          folder: website-gh-actions-build
+          folder: ${{ needs.project-setup.outputs.export-dir }}/dist
