Optimised built artifacts and updated artifact naming
Instead of archiving the entire repo as an artifact for builds, only archive the build repository to allow for optimisation in the project setup workflow. As such added a checkout in the deployment workflow to prevent issues with the gh pages deployment. Also updated the artifact naming by changing non-built artifacts to be named 'source-[sha]' instead of 'no-build-[sha]'

--- a/.github/workflows/setup-project.yml
+++ b/.github/workflows/setup-project.yml
@@ -58,10 +58,14 @@ jobs:
           if [[ ${{ inputs.build }} == 'true' ]]; then
             echo "BUILT=build"
           else
-            echo "BUILT=no-build"
+            echo "BUILT=source"
           fi
           echo "BUILD_NAME=$BUILT-${{ github.sha }}" >> $GITHUB_ENV
-      - name: Tarball Files
+      - name: Tarball Build Files for Export
+        if: ${{ inputs.build == true }}
+        run: tar -cvf ${{ env.BUILD_NAME }}.tar dist
+      - name: Tarball Source Files for Export
+        if: ${{ inputs.build != true }}
         run: tar -cvf ${{ env.BUILD_NAME }}.tar ./
       - name: Export Build
         uses: actions/upload-artifact@v3
