--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,6 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: project-setup
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          ref: main
       - name: Retrieve Build
         uses: actions/download-artifact@v3
         with:
