Fixed artifact archive naming and removal
Changed the echo to export to actually export the variable used for naming. Implemented a safer removal of archives

--- a/.github/workflows/lint-report.yml
+++ b/.github/workflows/lint-report.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Extract Tarball
         run: |
           tar -xvf ${{ needs.project-setup.outputs.export-dir }}.tar
-          rm ${{ needs.project-setup.outputs.export-dir }}.tar
+          rm ./${{ needs.project-setup.outputs.export-dir }}.tar
       - name: Lint JS Files
         uses: Maggi64/eslint-plus-action@master
         with:
@@ -63,7 +63,7 @@ jobs:
       - name: Extract Tarball
         run: |
           tar -xvf ${{ needs.project-setup.outputs.export-dir }}.tar
-          rm ${{ needs.project-setup.outputs.export-dir }}.tar
+          rm ./${{ needs.project-setup.outputs.export-dir }}.tar
       - name: Lint CSS Files
         uses: actions-hub/stylelint@master
         env:
