--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Extract Tarball
         run: |
           tar -xvf ${{ needs.project-setup.outputs.export-dir }}.tar
-          rm ${{ needs.project-setup.outputs.export-dir }}.tar
+          rm ./${{ needs.project-setup.outputs.export-dir }}.tar
       - name: Deploy on GH Pages
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
