--- a/.github/workflows/lint-fix.yml
+++ b/.github/workflows/lint-fix.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Extract Tarball
         run: |
           tar -xvf ${{ needs.project-setup.outputs.export-dir }}.tar
-          rm ${{ needs.project-setup.outputs.export-dir }}.tar
+          rm ./${{ needs.project-setup.outputs.export-dir }}.tar
       - name: Lint and Fix JS
         run: |
           npm run lint-js
@@ -68,7 +68,7 @@ jobs:
       - name: Extract Tarball
         run: |
           tar -xvf ${{ needs.project-setup.outputs.export-dir }}.tar
-          rm ${{ needs.project-setup.outputs.export-dir }}.tar
+          rm ./${{ needs.project-setup.outputs.export-dir }}.tar
       - name: Lint and Fix JS
         run: |
           npm run lint-css
