--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: main
-      - name: Retrieve Build
+      - name: Retrieve Build Artifact
         uses: actions/download-artifact@v3
         with:
           name: ${{ needs.project-setup.outputs.export-dir }}
