--- a/.github/workflows/lint-fix.yml
+++ b/.github/workflows/lint-fix.yml
@@ -32,7 +32,7 @@ jobs:
   project-setup:
     uses: devilsec/website/.github/workflows/setup-project.yml@main
   fix-js:
-    if: ${{ inputs.js == 'true' }} || ${{ github.event.review.state == 'approved' }}
+    if: ${{ inputs.js == true }} || ${{ github.event.review.state == 'approved' }}
     runs-on: ubuntu-latest
     needs: project-setup
     steps:
@@ -57,7 +57,7 @@ jobs:
           commit_user_name: JS Linting Bot
           commit_author: JS Linting Bot
   fix-css:
-    if: ${{ inputs.css == 'true' }} || ${{ github.event.review.state == 'approved' }}
+    if: ${{ inputs.css == true }} || ${{ github.event.review.state == 'approved' }}
     runs-on: ubuntu-latest
     needs: project-setup
     steps:
