--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "bootstrap-icons": "^1.8.1",
         "css-loader": "^6.7.1",
         "css-minimizer-webpack-plugin": "^3.4.1",
+        "flip-card-wc": "^1.3.0",
         "font-awesome": "^4.7.0",
         "html-loader": "^3.1.0",
         "html-webpack-plugin": "^5.5.0",
@@ -52,6 +53,7 @@
         "webpack-merge": "^5.8.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.17.10",
         "@babel/eslint-parser": "^7.17.0",
         "eslint": "^8.13.0",
         "eslint-config-airbnb": "^19.0.4",
