--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
         "start": "npm run watch"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.1.1",
         "@popperjs/core": "^2.11.5",
         "babel-loader": "^8.2.5",
         "bootstrap": "^5.1.3",
-        "bootstrap-icons": "^1.8.1",
         "css-loader": "^6.7.1",
         "css-minimizer-webpack-plugin": "^3.4.1",
-        "font-awesome": "^4.7.0",
         "html-loader": "^3.1.0",
         "html-webpack-plugin": "^5.5.0",
         "if-env": "^1.0.4",
@@ -42,9 +41,9 @@
         "npm-run-all": "^4.1.5",
         "postcss": "^8.4.12",
         "postcss-loader": "^6.2.1",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.50.1",
         "sass-loader": "^12.6.0",
-        "simple-icons": "^6.18.0",
         "style-loader": "^3.3.1",
         "stylelint-config-twbs-bootstrap": "^3.0.1",
         "webpack": "^5.72.0",
