Added brand icon classes and updated stylelint config
Added icon classes for brand icons, sourced from fontawesome. Updated the stylelint config to remove warnings of rules which were unncessary or invalid in their usage

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,5 +3,9 @@
         "stylelint-config-standard",
         "stylelint-config-prettier",
         "stylelint-config-standard-scss"
-    ]
+    ],
+    "rules": {
+        "function-no-unknown": null,
+        "scss/at-extend-no-missing-placeholder": null
+    }
 }
