--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "fix-css": "npm run lint-css -- --fix",
         "lint": "npm-run-all lint-js lint-css",
         "lint-fix": "npm-run-all fix-js fix-css",
+        "val-html": "htmlhint **/*.html",
         "build": "if-env NODE_ENV=production && npm run build:prod || npm run build:dev",
         "build:dev": "npm run lint-fix & webpack --config webpack.prod.js",
         "build:prod": "webpack --config webpack.prod.js",
