--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
         "lint": "npm-run-all lint-js lint-css",
         "lint-fix": "npm-run-all fix-js fix-css",
         "val-html": "htmlhint **/*.html",
+        "gen-sched": "python src/schedulegen.py",
         "build": "if-env NODE_ENV=production && npm run build:prod || npm run build:dev",
-        "build:dev": "npm run lint-fix & webpack --config webpack.prod.js",
-        "build:prod": "webpack --config webpack.prod.js",
+        "build:dev": "npm run lint-fix && webpack --config webpack.prod.js && npm run gen-sched",
+        "build:prod": "webpack --config webpack.prod.js && npm run gen-sched",
         "watch": "webpack serve --config webpack.dev.js",
         "start": "npm run watch"
     },
