--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -3,6 +3,8 @@ name: GitHub Pages Deployment
 on:
   push:
     branches: [main]
+  repository_dispatch:
+    types: [deployment]
 
 jobs:
   project-setup:
