Fixed deployment trigger with updated docs

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -3,8 +3,7 @@ name: GitHub Pages Deployment
 on:
   push:
     branches: [main]
-  repository_dispatch:
-    types: [deployment]
+  workflow_dispatch:
 
 jobs:
   project-setup:
