Revert "Fixed deployment trigger with updated docs"
This reverts commit d424a95bc99665ef7a585e4feeeafffb6cb25fd7.
Revert because of confusing and obsolete GitHub docs.

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -3,7 +3,8 @@ name: GitHub Pages Deployment
 on:
   push:
     branches: [main]
-  workflow_dispatch:
+  repository_dispatch:
+    types: [deployment]
 
 jobs:
   project-setup:
