--- a/.github/workflows/setup-project.yml
+++ b/.github/workflows/setup-project.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: main
-          token: ${{ secrets.COMMIT_TOKEN }}
+          token: ${{ github.token }}
           persist-credentials: true
           submodules: recursive
       - name: Checkout Branch no Write
