completed videosgen.py script to the point that it runs without errors and modifies videos.html. Modification is still not appropriate but will be fixed in the upcoming pull requests

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
         "gen-sched": "python src/schedulegen.py",
         "gen-vids": "python src/videosgen.py",
         "build": "if-env NODE_ENV=production && npm run build:prod || npm run build:dev",
-        "build:dev": "npm run lint-fix && webpack --config webpack.prod.js && npm run gen-sched",
-        "build:prod": "webpack --config webpack.prod.js && npm run gen-sched",
+        "build:dev": "npm run lint-fix && webpack --config webpack.prod.js && npm run gen-sched && npm run gen-vids",
+        "build:prod": "webpack --config webpack.prod.js && npm run gen-sched && npm run gen-vids",
         "watch": "webpack serve --config webpack.dev.js",
         "start": "npm run watch"
     },
